# agni

./: .gitignore  .pre-commit-config.yaml  Brewfile  Brewfile.dev  Brewfile.prod  CHANGELOG.md  Justfile  Makefile  README.md  cliff.toml  cog.toml  combination_tone_matrix.py  combination_tone_matrix.scd  committed.toml  couleurs.scd  flake.nix  install-dependencies  install_dependencies  install_dependencies.sh  install_dependencies.zsh  justfile  package.json  pdm.toml  pyproject.toml  requirements.txt
agni/: __main__.py  combination_tone_matrix.py  display.py  display_matrix.py  enums.py  helpers.py  main.py  matrix.py  matrix_frequency.py  matrix_leaf.py  matrix_pitch.py  notate_matrix.py  notation.py  part.py  passage.py  play_matrix.py  read_passage.py
agni/couleurs/: main.py  matrix.py  matrix_leaf.py  matrix_pitch.py  notation.py  passage.py
agni/jeu_de_timbres/: main.py
agni/passage/: passage.py  read_passage.py
examples/: lonely-child-notes.ily  lonely-child-text.ily  lonely-child.ly
just/: agni.just  python.just
nix/: python.nix
scripts/: add.nu  build.nu  cargo.nu  checkexec.nu  clean.nu  command.nu  coverage.nu  deps.nu  diff-env.nu  environment.nu  filesystem.nu  find-recipe.nu  find-script.nu  help.nu  install.nu  install_dependencies.zsh  issue.nu  pipx.nu  pre-commit-update.nu  profile.nu  python.nu  release.nu  remove.nu  run.nu  shell.nu  test.nu  update-deps.nu  update.nu  version.nu
scripts/agni/: example.nu  help.nu
scripts/python/: add.nu  build.nu  clean.nu  command.nu  coverage.nu  dependencies.nu  deps.nu  help.nu  install.nu  pin.nu  profile.nu  release.nu  remove.nu  run.nu  shell.nu  test.nu  update-deps.nu  update.nu  version.nu
scripts/tests/: test_check__get_pre_commit_hook_names.nu  test_deps__merge_flake_dependencies.nu  test_domain__parse_git_origin.nu  test_environment__merge_gitignores.nu  test_environment__merge_justfiles.nu  test_environment__merge_pre_commit_configs.nu
scripts/tests/mocks/: environment-justfile.just  generic-justfile.just
tests/: conftest.py  main_test.py  matrix_leaf_test.py  matrix_test.py  passage_test.py  test_helpers.py  test_main.py  test_matrix.py  test_matrix_leaf.py  test_matrix_pitch.py  test_passage.py
