[project]
name = "agni"
dynamic = ["version"]
description = """\
Music compositional tools inspired by the techniques of Claude Vivier
"""
authors = [
    {name = "Ben Rosen", email = "benjamin.j.rosen@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "claude vivier",
    "lilypond",
    "music notation",
    "music",
    "spectral",
]
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "abjad>=3.19",
    "supriya>=23.10b0",
    "abjad-ext-rmakers>=3.19",
    "more-itertools>=10.1.0",
]

[project.urls]
repository = "https://github.com/tymbalodeon/agni"

[project.scripts]
agni = "agni.main:agni"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]
line-length = 79
indent-width = 4

[tool.pdm.version]
source = "file"
path = "agni/__init__.py"

[tool.pdm.dev-dependencies]
dev = [
    "bpython>=0.24",
    "py-spy>=0.3.14",
    "ruff>=0.1.7",
    "pyright>=1.1.339",
    "pre-commit>=3.5.0",
    "coverage>=7.3.2",
    "pytest>=7.4.3",
]
