[project]
name = "agni"
version = "0.1.0"
description = """\
Music compositional tools inspired by the techniques of Claude Vivier
"""
authors = [{ name = "Ben Rosen", email = "benjamin.j.rosen@gmail.com" }]
readme = "README.md"
keywords = ["claude vivier", "lilypond", "music notation", "music", "spectral"]
requires-python = ">=3.11"
dependencies = [
  "supriya==24.3b2",
  "abjad-ext-rmakers>=3.19",
  "abjad>=3.19",
  "cyclopts>=3.1.5",
  "more-itertools>=10.5.0",
]

[project.urls]
repository = "https://github.com/tymbalodeon/agni"

[project.scripts]
agni = "agni.main:agni"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
exclude = [".git", ".ruff_cache", ".venv", "build", "dist"]
line-length = 79
indent-width = 4

[dependency-groups]
dev = ["bpython>=0.24", "coverage>=7.6.7", "pytest>=8.3.3"]
